# driveordie

./: .gitignore  BackMove.c  BackMove.h  CMakeLists.txt  ProjetC.docx  README.md  Road.c  Road.h  background.c  car.c  collision.c  main.c  obstacles.c  obstacles.h  road.c
src/: background.c  car.c  collision.c  game_over.c  menu.c  obstacles.c  road.c  score.c
src/modules/: background.h  car.h  collision.h  game_over.h  main.h  menu.h  obstacles.h  road.h  score.h
